--- a/SkyFish.html
+++ b/SkyFish.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="script/star.js">			</script>
 	<script type="text/javascript" src="script/plazma.js">			</script>
 	<script type="text/javascript" src="script/shatl.js">			</script>
+	<script type="text/javascript" src="script/guns.js">			</script>
 	<script type="text/javascript" src="script/meteorite.js">		</script>
 	<script type="text/javascript" src="script/mineral.js">			</script>			
 	<script type="text/javascript" src="script/target.js">			</script>
@@ -25,7 +26,7 @@
 	<script type="text/javascript" src="script/smart_missile_icon.js">	</script>
 	<script type="text/javascript" src="script/plazma_missile_icon.js">	</script>
 	<script type="text/javascript" src="script/mega_missile_icon.js">	</script>
-	<script type="text/javascript" src="script/panel.js">			</script>
+	<script type="text/javascript" src="script/panel.js">			</script>	
 	<script type="text/javascript" src="script/scene.js">			</script>
 	<script type="text/javascript" src="script/main.js">			</script>
 </head>
