--- a/SkyFish.html
+++ b/SkyFish.html
@@ -9,13 +9,18 @@
 	<script type="text/javascript" src="script/plazma.js">			</script>
 	<script type="text/javascript" src="script/shatl.js">			</script>
 	<script type="text/javascript" src="script/guns.js">			</script>
-	<script type="text/javascript" src="script/meteorite.js">		</script>
+	<script type="text/javascript" src="script/asteroid.js">		</script>
 	<script type="text/javascript" src="script/mineral.js">			</script>			
 	<script type="text/javascript" src="script/target.js">			</script>
 	<script type="text/javascript" src="script/angel.js">			</script>
 	<script type="text/javascript" src="script/arhangel.js">		</script>
-	<script type="text/javascript" src="script/principat.js">		</script>
-	<script type="text/javascript" src="script/potestat.js">		</script>	
+	<script type="text/javascript" src="script/principates.js">		</script>
+	<script type="text/javascript" src="script/potestates.js">		</script>
+	<script type="text/javascript" src="script/virtutes.js">		</script>
+	<script type="text/javascript" src="script/dominationes.js">		</script>
+	<script type="text/javascript" src="script/thronos.js">			</script>
+	<script type="text/javascript" src="script/cherubim.js">		</script>
+	<script type="text/javascript" src="script/seraphim.js">		</script>
 	<script type="text/javascript" src="script/reward.js">			</script>
 	<script type="text/javascript" src="script/heavy_missile.js">		</script>
 	<script type="text/javascript" src="script/smart_missile.js">		</script>
