--- a/SkyFish.html
+++ b/SkyFish.html
@@ -1,7 +1,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/style.css" type="text/css" />	
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="mobile-web-app-capable" content="yes">
+	<link rel="manifest" href="manifest.json">
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	<script type="text/javascript" src="script/seedrandom.min.js">		</script>	
 	<script type="text/javascript" src="script/element.js">			</script>
 	<script type="text/javascript" src="script/shape.js">			</script>
@@ -31,7 +34,8 @@
 	<script type="text/javascript" src="script/smart_missile_icon.js">	</script>
 	<script type="text/javascript" src="script/plazma_missile_icon.js">	</script>
 	<script type="text/javascript" src="script/mega_missile_icon.js">	</script>
-	<script type="text/javascript" src="script/panel.js">			</script>	
+	<script type="text/javascript" src="script/touch.js">			</script>
+	<script type="text/javascript" src="script/panel.js">			</script>
 	<script type="text/javascript" src="script/scene.js">			</script>
 	<script type="text/javascript" src="script/main.js">			</script>
 </head>
